# weather

./: .clangd  .env.ci  .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  0.27  LICENSE  PROJECT_DOCUMENT_INDEX.md  QUICKSTART.md  README.md  TEAM_SETUP.md  checkstyle.xml  dependency-check-suppressions.xml  dirs_output.txt  docker-compose.dev.yml  docker-compose.dockerhub.yml  docker-compose.extra.yml  docker-compose.jvm.env  docker-compose.yml  mkdocs.yml  owasp-suppressions.xml  package-lock.json  package.json  pom.xml  pyproject.toml  pyrightconfig.json  sonar-project.properties
data-assimilation-platform/: Dockerfile.prod  README.md  _fix_all.py  _fix_check.py  _fix_pass2.py  docker-compose.yml  pyproject.toml  requirements.txt
data-assimilation-platform/.github/: PULL_REQUEST_TEMPLATE.md
data-assimilation-platform/.github/workflows/: ci.yml  release.yml
data-assimilation-platform/algorithm_core/: .env.example  README.md  pyproject.toml  setup.py
data-assimilation-platform/algorithm_core/benchmarks/: README.md
data-assimilation-platform/algorithm_core/configs/: README.md  default.yaml  development.yaml  production.yaml
data-assimilation-platform/algorithm_core/docker/: Dockerfile  README.md  docker-compose.yml  nvidia.Dockerfile
data-assimilation-platform/algorithm_core/docs/: CHANGELOG.md
data-assimilation-platform/algorithm_core/examples/: Jenkinsfile  README.md  TESTING.md  advanced_usage.py  basic_usage.py  common.py  cuda_acceleration.py  default_config.json  demos.py  fair_parallel_demo.py  gpu_acceleration.py  parallel_demo.py  real_world_case.py  real_world_case_refactored.py  real_world_case_simple.py  test_adapters.py  结果分析.md
data-assimilation-platform/algorithm_core/examples/.github/workflows/: test.yml
data-assimilation-platform/algorithm_core/examples/templates/: test_report_template.html
data-assimilation-platform/algorithm_core/scripts/: README.md  run_cli.ps1
data-assimilation-platform/algorithm_core/src/bayesian_assimilation/: __init__.py  __version__.py  exceptions.py  test___version__.py
data-assimilation-platform/algorithm_core/src/bayesian_assimilation/accelerators/: README.md  __init__.py  (+10 more)
data-assimilation-platform/algorithm_core/src/data_sources/: README.md  __init__.py  base.py  buoy.py  factory.py  ground_station.py  radar.py  satellite.py  test_base.py  test_buoy.py  test_factory.py  test_ground_station.py  test_radar.py  test_satellite.py
data-assimilation-platform/algorithm_core/tests/: README.md  conftest.py
data-assimilation-platform/algorithm_core/tests/integration/: README.md  __init__.py  test_assimilation_workflow.py  test_workflows.py
data-assimilation-platform/algorithm_core/tests/unit/: README.md  __init__.py  test_assimilator.py  test_config.py  test_logging.py  test_metrics.py  test_validation.py
data-assimilation-platform/benchmarks/: README.md  __init__.py  conftest.py  run_5dvar_benchmark.py  test_3dvar_performance.py  test_4dvar_performance.py  test_5dvar_risk_performance.py  test_enkf_scaling.py
data-assimilation-platform/deployments/: README.md  docker-compose.full.yml
data-assimilation-platform/deployments/kubernetes/: configmap.yaml  ingress.yaml  namespace.yaml  python-deployment.yaml  redis-deployment.yaml  secrets.yaml  spring-deployment.yaml
data-assimilation-platform/deployments/monitoring/: alert-rules.yml  prometheus-config.yml
data-assimilation-platform/docs/: README.md  api.md  architecture.md  development.md  index.md  tutorials.md  uav_integration.md
data-assimilation-platform/scripts/: README.md  benchmark.py  install.sh  test_installation.py
data-assimilation-platform/service_python/: Dockerfile  README.md  docker-compose.yml
data-assimilation-platform/service_python/requirements/: README.md  base.txt  dev.txt  prod.txt
data-assimilation-platform/service_python/src/api/: __init__.py  main.py  multi_protocol.py
data-assimilation-platform/service_python/tests/: __init__.py  test_variance_field.py
data-assimilation-platform/service_spring/: .project  Dockerfile  README.md  pom.xml
data-assimilation-platform/shared/: README.md
data-assimilation-platform/shared/protos/: README.md
data-assimilation-platform/shared/protos/common/: README.md
data-assimilation-platform/shared/schemas/: README.md  assimilation_request.schema.json  assimilation_response.schema.json
edge-sdk/: .editorconfig  .gitattributes  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
edge-sdk/.github/workflows/: release.yml
edge-sdk/edge_sdk/: config.py  core.py  logger.py  risk_assessor_python.py
edge-sdk/edge_sdk/tests/: test_wind_speed_accuracy.py
edge-sdk/include/: dwa_planner.h  flight_controller.h  logger.h  offline_cache.h  path_smoother.h  trajectory_corrector.h
edge-sdk/src/: bindings.cpp  dwa_planner.cpp  flight_controller.cpp  offline_cache.cpp  path_planner.cpp  path_smoother.cpp  risk_assessor.cpp  trajectory_corrector.cpp
edge-sdk/tests/: test_edge_sdk.py
uav-edge-sdk/: .flake8  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  Makefile  README.md  build.bat  build.sh  requirements-dev.txt  setup.py  test_output.txt  test_result.txt
uav-edge-sdk/.github/workflows/: ci.yml
uav-edge-sdk/edge_sdk/: __init__.py  _core.py  config.py  flight_controller_python.py  logger.py  path_planner_python.py  risk_assessor_python.py
uav-edge-sdk/edge_sdk/tests/: test_wind_speed_accuracy.py
uav-edge-sdk/include/: flight_controller.h  path_planner.h  risk_assessor.h
uav-edge-sdk/src/: bindings.cpp  flight_controller.cpp
uav-edge-sdk/tests/: test_edge_sdk.py
uav-platform-v2/python/algorithm-engine/: Dockerfile  pyproject.toml  requirements.txt
uav-platform-v2/python/algorithm-engine/app/: __init__.py  config.py  main.py
uav-platform-v2/sdk/python-sdk/: README.md  pyproject.toml
uav-platform-v2/sdk/python-sdk/uav_platform/: __init__.py  auth.py  client.py  config.py  http.py  models.py
(+2372 files in other folders)
