# ===========================================
# 基于WRF气象驱动的无人机VRP智能路径规划系统
# 项目根目录 pyproject.toml - 项目级别工具配置
# ===========================================

[tool.pylance]
python.analysis.extraPaths = ["./algorithm_core/src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mvn
  | node_modules
  | target
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["bayesian_assimilation"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "node_modules"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "algorithm_core/tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uav-path-planning-system"
version = "1.0.0"
description = "基于WRF气象驱动的无人机VRP智能路径规划系统"
requires-python = ">=3.8"
