[metadata]
name = uav-edge-sdk
version = 1.0.0
author = Dithiothreitol
author_email = your.email@example.com
description = UAV Edge SDK with C++/Python hybrid implementation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/uav-edge-sdk
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: C++
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.950

[options.entry_points]
console_scripts =
    uav-edge-sdk = edge_sdk.cli:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 120
exclude = .git,__pycache__,build,dist
ignore = E203,W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
