[tool.pyright]
include = [
    "src/**/*.py",
    "tests/**/*.py"
]
exclude = [
    "__pycache__",
    "*.pyc",
    "*.pyo",
    ".venv",
    "venv"
]
strict = false
typeCheckingMode = "basic"

[tool.mypy]
python_version = "3.8"
strict = false
check_untyped_defs = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_configs = true
plugins = []

[project]
name = "bayesian_assimilation"
version = "1.0.0"
description = "贝叶斯同化算法核心库"
requires-python = ">=3.8"

[project.scripts]
assimilate = "bayesian_assimilation.api.cli:main"

[project.dependencies]
numpy = ">=1.21"
scipy = ">=1.7"
netCDF4 = ">=1.5"
pandas = ">=1.3"
scikit-learn = ">=1.0"
xarray = ">=0.20"