[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uav-platform-sdk"
version = "2.0.0"
description = "Python SDK for UAV Platform V2 - WRF-driven UAV VRP intelligent path planning system"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "UAV Platform Team", email = "support@uav-platform.example.com" },
]
keywords = ["uav", "drone", "weather", "path-planning", "utm", "wrf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["uav_platform"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
